...
                                                  seats: seats,
                                                  filledSeats: filledSeats,
                                                  preference: preference,
                                                  isDeparted: isDeparted),
                               isDeparted: isDeparted)
                } else {
                    Button("Fill Attendance Form") {
                        isSheetPresented = true
                    }
                    .sheet(isPresented: $isSheetPresented) {
                        AttendanceFormView(isSheetPresented: $isSheetPresented, role: "driver")
                    }
                }
...
                                .foregroundColor(.black)
                                .scaleEffect(x: 1, y: squishScale)
                                .offset(x: 0, y: squishOffset)
                                .animation(.easeIn, value: squishScale)
                                .animation(.easeIn, value: squishOffset)

                        }.accessibilityIdentifier("clear")
                        ForEach(0..<thisDriver.seats, id: \.self) { index in
                            Image(systemName: thisDriver.isSeatFilled(at: index) ? "person.fill" : "person")
                                .font(.system(size: 40)) // Adjust the size as needed
                                .foregroundColor(.black) // Change icon color if needed
                                .scaleEffect(x: 1, y: squishScale)
                                .offset(x: 0, y: squishOffset)
                                .animation(.easeIn, value: squishScale)
                                .animation(.easeIn, value: squishOffset)
...
                    .cornerRadius(10)
                }
                
                Group {
                    Spacer()
                    
                    Text("North Drivers").font(.subheadline)
                    ForEach(Array(dailyViewModel.filterDrivers(locationFilter: "north", careDeparted: false)), id: \.key) { (userID, userData) in
                        VStack(alignment: .leading, spacing: 10) {
                            Text("Name: \(userData["name"] as? String ?? "?")")
                            Text("Seats Filled: \(userData["filled_seats"] as? Int ?? 0)/\(userData["seats"] as? Int ?? 0)")
                            Text("Departed: \(userData["isDeparted"] as? Bool ?? false ? "Yes" : "No")")
                        }
...
